--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "@repo/logger",
-  "version": "0.0.0",
-  "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist/**"
-  ],
-  "scripts": {
-    "build": "tsc",
-    "clean": "rm -rf dist",
-    "dev": "tsc -w",
-    "lint": "eslint \"src/**/*.ts*\" --max-warnings 0",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "@repo/jest-presets/node"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/jest-presets": "*",
-    "@repo/typescript-config": "*",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24",
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0",
-    "typescript": "^5.3.3"
-  }
+   "name": "@repo/logger",
+   "version": "0.0.0",
+   "private": true,
+   "main": "./dist/index.js",
+   "types": "./dist/index.d.ts",
+   "files": [
+      "dist/**"
+   ],
+   "scripts": {
+      "build": "tsc",
+      "clean": "rm -rf dist",
+      "dev": "tsc -w",
+      "lint": "eslint \"src/**/*.ts*\" --max-warnings 0",
+      "test": "jest"
+   },
+   "jest": {
+      "preset": "@repo/jest-presets/node"
+   },
+   "dependencies": {
+      "winston": "^3.13.0"
+   },
+   "devDependencies": {
+      "@repo/eslint-config": "*",
+      "@repo/jest-presets": "*",
+      "@repo/typescript-config": "*",
+      "@types/jest": "^29.5.12",
+      "@types/node": "^20.11.24",
+      "eslint": "^8.57.0",
+      "jest": "^29.7.0",
+      "typescript": "^5.3.3"
+   }
 }
-
