--- a/turbo.json
+++ b/turbo.json
@@ -1,26 +1,37 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["PORT"],
-  "pipeline": {
-    "build": {
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**", "public/dist/**"],
-      "dependsOn": ["^build"],
-      "env": ["NEXT_PUBLIC_API_HOST"]
-    },
-    "test": {
-      "outputs": ["coverage/**"],
-      "dependsOn": []
-    },
-    "lint": {
-      "dependsOn": ["^build"]
-    },
-    "dev": {
-      "cache": false,
-      "persistent": true
-    },
-    "clean": {
-      "cache": false
-    }
-  }
+   "$schema": "https://turbo.build/schema.json",
+   "globalDependencies": ["**/.env.*local"],
+   "globalEnv": ["PORT"],
+   "tasks": {
+      "build": {
+         "outputs": [
+            "dist/**",
+            ".next/**",
+            "!.next/cache/**",
+            "public/dist/**"
+         ],
+         "dependsOn": ["^build"],
+         "env": ["NEXT_PUBLIC_API_HOST"]
+      },
+      "test": {
+         "outputs": ["coverage/**"],
+         "dependsOn": []
+      },
+      "lint": {
+         "dependsOn": ["^build"]
+      },
+      "dev": {
+         "cache": false,
+         "persistent": true
+      },
+      "clean": {
+         "cache": false
+      },
+      "db:generate": {
+         "cache": false
+      },
+      "db:push": {
+         "cache": false
+      }
+   }
 }
