--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
    "$schema": "https://turbo.build/schema.json",
    "globalDependencies": ["**/.env.*local"],
-   "globalEnv": ["PORT"],
+   "globalEnv": ["DATABASE_URL"],
    "tasks": {
       "build": {
          "outputs": [
@@ -31,6 +31,9 @@
          "cache": false
       },
       "db:push": {
+         "cache": false
+      },
+      "migrate:dev": {
          "cache": false
       }
    }
