--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -11,6 +11,7 @@
       "@prisma/client": "^5.5.2"
    },
    "scripts": {
+      "format": "prisma format",
       "pull": "npm run db:generate && prisma db pull --schema=src/prisma/schema.prisma",
       "build": "npm run db:generate",
       "db:generate": "prisma generate --schema=src/prisma/schema.prisma",
